<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#EC1414"
                android:onClick="onClickFunction"
                android:text="@string/clear"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button

                android:id="@+id/pow"

                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle"

                android:onClick="onClickFunction"
                android:text="@string/pow"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />/>

            <Button
                android:id="@+id/multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle"

                android:onClick="onClickFunction"
                android:text="@string/multiply"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onClickNumericalbtn"
                android:text="@string/seven"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onClickNumericalbtn"
                android:text="@string/eight"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle"

                android:onClick="onClickNumericalbtn"
                android:text="@string/nine"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/div"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onClickFunction"
                android:text="@string/div"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onClickNumericalbtn"
                android:text="@string/four"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onClickNumericalbtn"
                android:text="@string/five"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onClickNumericalbtn"
                android:text="@string/six"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/plus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onClickFunction"
                android:text="@string/plus"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onClickNumericalbtn"
                android:text="@string/one"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#263238"
                android:onClick="onClickNumericalbtn"
                android:text="@string/two"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#263238"
                android:onClick="onClickNumericalbtn"
                android:text="@string/three"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/minus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onClickFunction"
                android:text="@string/minus"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/remainder"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onClickFunction"
                android:text="@string/remainder"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onClickNumericalbtn"
                android:text="@string/zero"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/dot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onClickNumericalbtn"
                android:text="@string/dot"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/equals"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#6EBCFA"
                android:onClick="onClickFunction"
                android:text="@string/equals"
                android:textColor="#616161"
                android:textSize="22sp" />
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text=" "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="36sp"
        tools:ignore="LabelFor"
        android:autofillHints="false"
        android:textAlignment="textEnd"
        android:inputType="none"
        android:gravity="end" />



</androidx.constraintlayout.widget.ConstraintLayout>
